# indian-market-data

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-mcx.yml  publish-msci.yml  publish-nse.yml  publish-umbrella.yml  publish.yml
.lambda_layer/: README.md  build.sh  deploy.md  download_all.py  lambda_function.py
docs/: _config.yml  api-reference.md  bse-indices.md  bse.md  capital-market-indices.md  capital-market-slb.md  capital-market.md  debt-corporate.md  deploy-testpypi.md  derivatives-ird.md  index.md  installation.md  lambda.md  mcx-spot.md  mcx.md  msci.md  nse.md  reference.md  usage-cli.md  usage-python-mcx.md  usage-python.md
samples/reports/: bhavcopy_2026-04-17.csv  ind_close_all_2026-04-17.csv  market_activity_2026-04-17.csv  sec_bhavdata_full_2026-04-17.csv
src/nsedata/: __init__.py  cli.py  dataframe.py  fetcher.py  indices.py  nse.py  registry.py  reports.py  session.py
